connected supabase database and added homeveda DB file

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PGHOST=localhost
-PGPORT=5432
-PGUSER=sagar739
-PGPASSWORD=Sagar@739
-PGDATABASE=homeveda
+PGHOST=aws-1-ap-southeast-2.pooler.supabase.com
+PGPORT=6543
+PGUSER=postgres.bluwgwdnohqyqvzyymcs
+PGPASSWORD=Devnectar-Github$1
+PGDATABASE= postgres
 PORT=4000
