--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ PGUSER=sagar739
 PGPASSWORD=Sagar@739
 PGDATABASE=homeveda
 PORT=4000
+DATABASE_URL=postgresql://postgres:homeveda_123dev@db.cnwwuvukhitoivevosqr.supabase.co:5432/postgres
