--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+
+
+  
+
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
@@ -12,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-analytics/data": "^5.2.1",
     "@supabase/supabase-js": "^2.88.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
