implemented payment gateway integration with minor fixes

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 
 GA4_PROPERTY_ID=524293127
 GA4_KEY_FILE=./config/ga4-service-account.json
+RAZORPAY_KEY_ID=rzp_test_SIPp9QznVVM48W
+RAZORPAY_KEY_SECRET=DtZTKWMjrFPxidjgAGLtlT4Y
