--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "natural": "^8.1.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
